Revision 4.2.3
--------------

- SECURITY FIX: USM subsystem did not verify securityLevel of a request
  to an authoritative SNMP engineinbound against auth/priv protocols
  configured for the user in question. That allowed unauthenticated/unciphered
  access to pysnmp-based Agent even if USM user is configured to provide one.
- Mib Instrumentation subsystem re-worked to get rid of an excessive
  unpublished MIB values smiCreate()/smiWrite()/smiDestroy() methods.
- MibTree.readTest[Get]Next() reworked to be called uniformely so
  user could tap on these methods at any level of the MIB tree.
- Hex dumps of binary parts of the protocol added to ease system
  operations analysis.
- SnmpEngineId autogeneration does not call DNS resolver but uses
  local hostname not to depend upon local IP availability and performance.
- Package version is now available as __init__.__version__ and it is 
  in-sync with distutils.
- Package meta-information updated.
- The __init__.py's made non-empty (rumors are that they may be optimized 
  out by package managers).
- Multiple fixes to UNIX domain socket transport to make it fully
  operational again.
- Fix to IPv6 address handling to prevent system from crashing whilst
  running Python3. 
- Fix to SNMPv2 exception objects translation into SNMPv1 PDU and NEXT
  OIDs calculation.
- Fix to MibTree class to properly report noSuchObject & noSuchInstance
  SNMP special values.
- Fix to libsmi2pysnmp tool to make it working again in Python < 2.7
- Fix to exception handling at decodeMessageVersion() caller to prevent
  ASN.1 parsing errors crashing the whole app.
- Fix to GenericTrap type processing at rfc2576:v1Tov2c() which used to
  crash the whole SNMP engine.
- Typo fix to snmpInASNParseErrs MIB instance object.
- Typo fix to errind.EngineIdMismatch class and its instance.

Revision 4.2.2
--------------

- Oneliner CommandGenerator can now limit the number of SNMP table
  rows returned by nextCmd()/bulkCmd() methods.